K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  # replicas are basically horizontal scaling (ex multiple api containers that run at the same time etc...)
  replicas: 1
  # selector and template are defining the template were creating
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        ## we use our previously created docker containers here
        - name: commandservice
          image: vincepr/commandservice:latest
---
# we could put this in a separate file, --- separates this as a 'new' one
# We add a new ClusterIpService to our Deployment
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 80
